# youtui

./: Cargo.toml  LICENSE  README.md  nohup.out  package-lock.json
.github/workflows/: ci.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: details-panel.md
.sisyphus/evidence/: f3-integration-flow1.txt  f3-integration-flow2.txt  f3-integration-flow3.txt  f3-integration-flow4.txt  f3-integration-flow5.txt  f3-integration-flow6.txt  f3-integration-flow7.txt  task-10-all-themes.txt  task-10-borders-check.md  task-10-min-size.txt
.sisyphus/evidence/final-qa/: history-view-2.txt  history-view.txt  history_theme_4.txt  history_theme_5.txt  layout-150.txt  main-view-back.txt  main_theme_1.txt  main_theme_2.txt  main_theme_3.txt  menu-down.txt  menu-up-arrow.txt  nav_search_down.txt  playback-view.txt  playlist-prompt.txt  (+14 more)
.sisyphus/plans/: debug-enter-search.md  details-panel.md  fix-video-playback.md  focused-pane-ux.md  playback-fallback-system.md  search-enter-tab-fix.md  search-input-text-visibility.md  search-input-visibility.md  sidebar-focus-mode.md  sidebar-ui-improvement.md  ui-redesign.md  unicode-truncation-fix.md  youtui-rs.md
src/: error.rs  lib.rs  main.rs
src/api/: health.rs  invidious.rs  mod.rs  piped.rs  providers.rs  ytdlp.rs
src/config/: mod.rs  settings.rs
src/db/: connection.rs
src/download/: downloader.rs
src/models/: mod.rs  playlist.rs  search_result.rs  video.rs
src/player/: detector.rs  ipc.rs  mod.rs  mpv.rs  path.rs  vlc.rs
src/ui/: app.rs  components.rs  mod.rs  settings.rs  theme.rs
src/utils/: logger.rs
(+9 files in other folders)
