[package]
name = "youtui-rs"
version = "0.1.0"
edition = "2021"
description = "A feature-rich YouTube terminal client in Rust"
authors = ["ZeroNeroIV"]
license = "MIT"
repository = ""

[dependencies]
# TUI Framework
ratatui = "0.30"
crossterm = "0.27"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite (with bundled feature for static linking)
rusqlite = { version = "0.39", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Utilities
dirs = "6"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
arboard = "3"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
